fix(header): hide dropdown chevron on mobile using specificity

--- a/frontend/assets/scss/blocks/_header.scss
+++ b/frontend/assets/scss/blocks/_header.scss
@@ -479,7 +479,7 @@
       padding: rem(6) 0;
     }
 
-    &__dropdown-chevron {
+    &__dropdown-chevron.ui-icon {
       display: none;
     }
 
